--- a/src/app/features/management/management-add/management-add.component.html
+++ b/src/app/features/management/management-add/management-add.component.html
@@ -98,7 +98,8 @@
                   >
                     <i class="fas fa-venus-mars text-blue-500 mr-2"></i>
                     Giới tính<span class="text-red-500 ml-1">*</span>
-                  </label>                  <div class="relative">
+                  </label>
+                  <div class="relative">
                     <select
                       formControlName="gender"
                       class="w-full px-4 py-3 bg-gray-50 border-2 border-gray-200 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 appearance-none transition-all duration-300 cursor-pointer"
